--- a/dashboard.html
+++ b/dashboard.html
@@ -322,6 +322,14 @@
       box-shadow: var(--shadow-hover);
     }
 
+    .card.closed {
+      opacity: 0.6;
+    }
+
+    .card.closed .card-header {
+      background: linear-gradient(135deg, #9e9e9e, #757575);
+    }
+
     .card-header {
       display: flex;
       align-items: center;
@@ -387,7 +395,7 @@
 
 
     .card-body {
-      max-height: 400px;
+      max-height: none;
       overflow-y: auto;
       background: var(--card-bg);
     }
