Add duplicates view

--- a/dashboard.html
+++ b/dashboard.html
@@ -815,6 +815,7 @@
 
     <nav>
       <a href="#" id="nav-tabs" class="active">Pestañas</a>
+      <a href="#" id="nav-duplicates">Repetidas</a>
       <!-- Futuros módulos -->
     </nav>
   </aside>
