Show delete option for empty or closed windows

--- a/dashboard.html
+++ b/dashboard.html
@@ -586,6 +586,7 @@
     .suspend-icon{color:#1976d2;}
     .restore-icon{color:#4caf50;}
     .delete-icon{color:#e53935;}
+    .delete-window{color:#e53935;}
 
     /* ═══════════════════════════════════════════════════════
        RESULTADOS DE BÚSQUEDA
